# unmask

./: .gitignore  APOLLO-PROBE-PREDICTION.md  LICENSE  LLM-SEAT-RESULTS.md  README.md  RUNBOOK.md  compute_channel_decomposition.py  compute_p0_deploy_af.py  paper207-channel-switching-rlhf-berkson.md  validate_release.py
cantrip-loom/: README.md  loom_poscontrol.exs  loom_temptation.exs
eval/: .gitignore  QWEN35_9B_R10_RESULT.md  README.md  analysis.py  blind_judge.py  channel_switching_eval.py  judge_sweep.py  pyproject.toml  rerun_consistency.py  rescore.py  run_baselines.sh  run_poscontrol.sh  test_offline.py
eval/saved_runs/: LiquidAI--LFM2-24B-A2B_rescored.txt  MiniMaxAI--MiniMax-M2.7_rescored.txt  Qwen--Qwen3.5-397B-A17B_rescored.txt  Qwen--Qwen3.5-9B_rescored.txt  Qwen--Qwen3.5-9B_seed-repl_129d4284_rescored.txt  Qwen--Qwen3.5-9B_seed-repl_d45ccf68_rescored.txt  README.md  claude-haiku-4-5_rescored.txt  claude-sonnet-4-6_rescored.txt  google--gemma-4-31B-it_rescored.txt  gpt-4.1-mini_rescored.txt  moonshotai--Kimi-K2.6_rescored.txt  nvidia--nemotron-3-ultra-550b-a55b_rescored.txt  zai-org--GLM-5.1_rescored.txt
experiments/: tier2_adversarial.py  tier2_adversarial_results.json  tier2_pe_vs_projection.py  tier2_results.json  tier3_efficiency.py  tier3_results.json
fixtures/: .gitignore  README.md
probes/: cantrip_loom_207_probe.py
toy/: .gitignore  README.md  env.py  results.json  train_sweep.py
